--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -78,7 +78,6 @@ body {
 .profile pre {
     color: #808080;
     font-style: italic;
-    margin: 20px 10px;
     border: solid 1px #ddd
     background: inherit;
 }
@@ -90,9 +89,8 @@ body {
     margin-bottom: 10px;
     font-size: 16px;
 }
-.profile .email-button {
-    display: inline;
+.profile .side-button {
     position: relative;
+    top: 3px;
     left: 7px;
-    top: 5px;
 }
